--- a/app/src/main/res/values-tw/strings.xml
+++ b/app/src/main/res/values-tw/strings.xml
@@ -7,6 +7,23 @@
     <string name="airport">機場</string>
 
     <!-- Error messages -->
-    <string name="error_fragment_message">An error occurred</string>
-    <string name="dismiss_error">Dismiss</string>
+    <string name="search">搜尋</string>
+    <string name="date">日期</string>
+    <string name="fights_info">航班訊息</string>
+    <string name="monday">一</string>
+    <string name="tuesday">二</string>
+    <string name="wednesday">三</string>
+    <string name="thursday">四</string>
+    <string name="friday">五</string>
+    <string name="saturday">六</string>
+    <string name="sunday">日</string>
+    <string name="ad">抵達 / 出發</string>
+    <string name="flight_id">航班代號</string>
+    <string name="scheduled_time">表訂時間</string>
+    <string name="estimated_time">預計時間</string>
+    <string name="airline_company">航空公司</string>
+    <string name="from">出發地</string>
+    <string name="gate">航廈</string>
+    <string name="flight_status">航班狀態</string>
+    <string name="to">目的地</string>
 </resources>
